1999-01-17  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Collection.m, Map.m, String.m ([HDF5_c hdf5Out:deep:]): Use
	getTypeName instead of name.

	* Map.m ([Map_c -lispOut:deep:]): Likewise.

	* List.m ([List_any -lispOut:deep:]): Likewise.

	* StringObject.m ([String_c -lispOut:deep:]): Use getTypeName
	instead of literal String.

1999-01-16  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Collection.m, Map.m ([HDF5_c hdf5Out:deep:]): Set createFlag.
	
1999-01-15  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* collections.h (String): Remove setLiteralFlag: and getLiteralFlag.

	* StringObject.[hm] ([String_c -getCount], [String_c -count], 
	[String_c -length]): Return unsigned.
	([String_c -lispIn:], [String_c -lispOut:deep:],
	[String_c -hdfIn:], [String_c -hdfOutOut:deep:): New methods.

	* StringObject.m: ([String_c -out:]): Remove.

	* List.[hm]: Make getCountPerBlock return unsigned.

	* InputStream.m: Include StringObject.h.

	* Map.m ([Map_c -hdf5Out:deep:]): Use storeAttributes:value: to
	save a compare function attribute.  Add support for non-object
	keys.
	
1999-01-14  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Map.m, collection.h (compareCStrings): New function.
	([Map_c -lispOut:deep:], [Map_c -lispInCreate:]): Add support
	for c-strings.
	(COMPARE_{FUNCTION,INT,UNSIGNED,CSTRING,ID}: New macros.
	([Map_c -lispInCreate:], [Map_c -lispOut:deep:]): Use them.
	([Map_c -lispOut:deep:]): Abort if unknown compareFunc.

	* Map.h (compareIDs, compareIntegers, compareUnsignedIntegers,
	compareCStrings): Declare.
	
	* Map.m ([Map_c -lispOut:deep:], [Map_c -hdf5Out:deep:]): Use DSIZE.
	([Map_c -hdf5Out:deep:]): Handle compareFunc of integers differently
	from IDs.

	* Collections.m ([Collection_any -hdf5Out:deep:]): Use DSIZE.

1999-01-14  Alex Lancaster  <alex@santafe.edu>

	* Map.m ([Map_c -lispOut:deep:]): compareUnsigned ->
	compareUnsignedIntegers

1999-01-14  Marcus G. Daniels  <mgd@chama.santafe.edu>
