@@ -1,7 +1,15 @@
 1999-01-17  Marcus G. Daniels  <mgd@chama.santafe.edu>
 
+	* Collection.m, Map.m, String.m ([HDF5_c hdf5Out:deep:]): 
+	Use setClass: instead of setSourceClass: and setCompoundType:count:
+	instead of setRecordType:count: (renames).
+	Call writeRowNames:.
+
+	* Map.m ([HDF5_c hdf5Out:deep:]): Set typeName to Map member
+	type, not Map. 
+
 	* Collection.m, Map.m, String.m ([HDF5_c hdf5Out:deep:]): Use
-	getTypeName instead of name.
+	getTypeName instead of name.  
 
 	* Map.m ([Map_c -lispOut:deep:]): Likewise.
 
